@@ -103,6 +103,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #25590: In the Readline completer, only call getattr() once per
+  attribute.
+
 - Issue #25498: Fix a crash when garbage-collecting ctypes objects created
   by wrapping a memoryview.  This was a regression made in 3.4.3.  Based
   on patch by Eryksun.
